--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,5 +24,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - uses: codecov/codecov-action@v2      
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
       # https://github.com/codecov/codecov-action
