--- a/src/main/resources/docgen/templates/wiki-all-6-3-tamber-bm25.template
+++ b/src/main/resources/docgen/templates/wiki-all-6-3-tamber-bm25.template
@@ -21,7 +21,7 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/${corpus}/`should be a directory containing the wikipedia-dpr-100w passages collection retrieved from [here](https://dl.fbaipublicfiles.com/dpr/wikipedia_split/psgs_w100.tsv.gz).
+The directory `/path/to/${corpus}/`should be a directory containing the wiki-all-6-3-tamber passages collection retrieved from [here](https://huggingface.co/datasets/castorini/odqa-wiki-corpora).
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
