--- a/src/main/resources/regression/msmarco-passage-splade-pp-sd.yaml
+++ b/src/main/resources/regression/msmarco-passage-splade-pp-sd.yaml
@@ -56,7 +56,7 @@ topics:
 
 models:
   - name: splade-pp-sd
-    display: SPLADE pp sd
+    display: SPLADE++ CoCondenser-SelfDistil
     params: -impact -pretokenized
     results:
       AP@1000:
