--- a/src/main/resources/regression/dl20-doc-composite-tokenizer.yaml
+++ b/src/main/resources/regression/dl20-doc-composite-tokenizer.yaml
@@ -5,7 +5,7 @@ corpus_path: collections/msmarco/msmarco-doc/
 index_path: indexes/lucene-index.msmarco-doc-composite-tokenizer/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
-index_threads: 7
+index_threads: 9
 index_options: -storePositions -storeDocvectors -storeRaw -analyzeWithHuggingFaceTokenizer bert-base-uncased -useCompositeTokenizer
 index_stats:
   documents: 3213835
@@ -13,16 +13,16 @@ index_stats:
   total terms: 8068479907
 
 metrics:
-  - metric: AP@1000
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2020 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: RR@100
+  - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -46,21 +46,21 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    id: dev
-    path: topics.msmarco-doc.dev.txt
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.txt
+    qrel: qrels.dl20-doc.txt
 
 models:
   - name: bm25-default
     display: BM25 (default)
     params: -bm25 -analyzeWithHuggingFaceTokenizer bert-base-uncased -useCompositeTokenizer
     results:
-      AP@1000:
-        - 0.2410
-      RR@100:
-        - 0.2403
+      AP@100:
+        - 0.3809
+      nDCG@10:
+        - 0.5422
       R@100:
-        - 0.7441
+        - 0.6074
       R@1000:
-        - 0.9004
+        - 0.8147
