--- a/src/main/resources/regression/dl20-passage-composite-tokenizer.yaml
+++ b/src/main/resources/regression/dl20-passage-composite-tokenizer.yaml
@@ -1,42 +1,42 @@
 ---
-corpus: msmarco-doc
-corpus_path: collections/msmarco/msmarco-doc/
+corpus: msmarco-passage
+corpus_path: collections/msmarco/passage
 
-index_path: indexes/lucene-index.msmarco-doc-composite-tokenizer/
+index_path: indexes/lucene-index.msmarco-passage-composite-tokenizer/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
-index_threads: 7
+index_threads: 9
 index_options: -storePositions -storeDocvectors -storeRaw -analyzeWithHuggingFaceTokenizer bert-base-uncased -useCompositeTokenizer
 index_stats:
-  documents: 3213835
-  documents (non-empty): 3213835
-  total terms: 8068479907
+  documents: 8841823
+  documents (non-empty): 8841823
+  total terms: 1015216415
 
 metrics:
   - metric: AP@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -m map -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
-  - metric: RR@100
+  - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -m ndcg_cut.10 -c
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100
+    params: -m recall.100 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000
+    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -46,10 +46,10 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    id: dev
-    path: topics.msmarco-doc.dev.txt
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.txt
+    qrel: qrels.dl20-passage.txt
 
 models:
   - name: bm25-default
@@ -57,10 +57,10 @@ models:
     params: -bm25 -analyzeWithHuggingFaceTokenizer bert-base-uncased -useCompositeTokenizer
     results:
       AP@1000:
-        - 0.2410
-      RR@100:
-        - 0.2403
+        - 0.2854
+      nDCG@10:
+        - 0.4939
       R@100:
-        - 0.7441
+        - 0.5667
       R@1000:
-        - 0.9004
+        - 0.8069
