--- a/src/main/resources/docgen/templates/mrtydi-v1.1-fi-aca.template
+++ b/src/main/resources/docgen/templates/mrtydi-v1.1-fi-aca.template
@@ -2,7 +2,7 @@
 
 **Models**: bag-of-words approaches using `AutoCompositeAnalyzer`
 
-This page documents BM25 regression experiments for [Mr. TyDi (v1.1) &mdash; Finnish](https://github.com/castorini/mr.tydi) using AutoCompositeAnalyzer.
+This page documents BM25 regression experiments for [Mr. TyDi (v1.1) &mdash; Finnish](https://github.com/castorini/mr.tydi) using `AutoCompositeAnalyzer`.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
