--- a/src/main/resources/regression/dl19-doc-ca.yaml
+++ b/src/main/resources/regression/dl19-doc-ca.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-doc
 corpus_path: collections/msmarco/msmarco-doc/
 
-index_path: indexes/lucene-index.msmarco-composite-analyzer/
+index_path: indexes/lucene-index.msmarco-doc-ca/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 9
