--- a/src/main/resources/regression/dl20-passage-ca.yaml
+++ b/src/main/resources/regression/dl20-passage-ca.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-passage
 corpus_path: collections/msmarco/passage
 
-index_path: indexes/lucene-index.msmarco-passage-composite-analyzer/
+index_path: indexes/lucene-index.msmarco-passage-ca/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 9
