--- a/src/main/resources/regression/disk45.yaml
+++ b/src/main/resources/regression/disk45.yaml
@@ -30,15 +30,15 @@ metrics:
 
 topic_reader: Trec
 topics:
-  - name: "[TREC-7 Ad Hoc Topics](../src/main/resources/topics-and-qrels/topics.adhoc.351-400.txt)"
+  - name: "[TREC-7 Ad Hoc Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.adhoc.351-400.txt)"
     id: trec7
     path: topics.adhoc.351-400.txt
     qrel: qrels.adhoc.351-400.txt
-  - name: "[TREC-8 Ad Hoc Topics](../src/main/resources/topics-and-qrels/topics.adhoc.401-450.txt)"
+  - name: "[TREC-8 Ad Hoc Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.adhoc.401-450.txt)"
     id: trec8
     path: topics.adhoc.401-450.txt
     qrel: qrels.adhoc.401-450.txt
-  - name: "[TREC 2004 Robust Track Topics](../src/main/resources/topics-and-qrels/topics.robust04.txt)"
+  - name: "[TREC 2004 Robust Track Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.robust04.txt)"
     id: robust04
     path: topics.robust04.txt
     qrel: qrels.robust04.txt
