--- a/src/main/resources/regression/ntcir8-zh.yaml
+++ b/src/main/resources/regression/ntcir8-zh.yaml
@@ -38,7 +38,7 @@ metrics:
 
 topic_reader: TsvString
 topics:
-  - name: "[NTCIR-8 ACLIA (IR4QA subtask, Monolingual Chinese)](../src/main/resources/topics-and-qrels/topics.ntcir8zh.eval.txt)"
+  - name: "[NTCIR-8 ACLIA (IR4QA subtask, Monolingual Chinese)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.ntcir8zh.eval.txt)"
     id: ntcir8
     path: topics.ntcir8zh.eval.txt
     qrel: qrels.ntcir8.eval.txt
