--- a/src/main/resources/regression/backgroundlinking18.yaml
+++ b/src/main/resources/regression/backgroundlinking18.yaml
@@ -30,7 +30,7 @@ metrics:
 
 topic_reader: BackgroundLinking
 topics:
-  - name: "[TREC 2018 Topics](../src/main/resources/topics-and-qrels/topics.backgroundlinking18.txt)"
+  - name: "[TREC 2018 Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.backgroundlinking18.txt)"
     id: bglink18
     path: topics.backgroundlinking18.txt
     qrel: qrels.backgroundlinking18.txt
