--- a/src/main/resources/regression/backgroundlinking19.yaml
+++ b/src/main/resources/regression/backgroundlinking19.yaml
@@ -30,7 +30,7 @@ metrics:
 
 topic_reader: BackgroundLinking
 topics:
-  - name: "[TREC 2019 Topics](../src/main/resources/topics-and-qrels/topics.backgroundlinking19.txt)"
+  - name: "[TREC 2019 Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.backgroundlinking19.txt)"
     id: bglink19
     path: topics.backgroundlinking19.txt
     qrel: qrels.backgroundlinking19.txt
