--- a/src/main/resources/regression/car17v1.5.yaml
+++ b/src/main/resources/regression/car17v1.5.yaml
@@ -30,7 +30,7 @@ metrics:
 
 topic_reader: Car
 topics:
-  - name: "[TREC 2017 CAR: benchmarkY1test (v1.5)](../src/main/resources/topics-and-qrels/topics.car17v1.5.benchmarkY1test.txt/)"
+  - name: "[TREC 2017 CAR: benchmarkY1test (v1.5)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.car17v1.5.benchmarkY1test.txt/)"
     id: car17v1.5
     path: topics.car17v1.5.benchmarkY1test.txt
     qrel: qrels.car17v1.5.benchmarkY1test.txt
