--- a/src/main/resources/regression/car17v2.0-doc2query.yaml
+++ b/src/main/resources/regression/car17v2.0-doc2query.yaml
@@ -30,7 +30,7 @@ metrics:
 
 topic_reader: Car
 topics:
-  - name: "[TREC 2017 CAR: benchmarkY1test (v2.0)](../src/main/resources/topics-and-qrels/topics.car17v2.0.benchmarkY1test.txt)"
+  - name: "[TREC 2017 CAR: benchmarkY1test (v2.0)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.car17v2.0.benchmarkY1test.txt)"
     id: car17v2.0
     path: topics.car17v2.0.benchmarkY1test.txt
     qrel: qrels.car17v2.0.benchmarkY1test.txt
