--- a/src/main/resources/regression/clef06-fr.yaml
+++ b/src/main/resources/regression/clef06-fr.yaml
@@ -37,7 +37,7 @@ metrics:
 
 topic_reader: TsvString
 topics:
-  - name: "[CLEF 2006 (Monolingual French)](../src/main/resources/topics-and-qrels/topics.clef06fr.mono.fr.txt)"
+  - name: "[CLEF 2006 (Monolingual French)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.clef06fr.mono.fr.txt)"
     id: clef06fr
     path: topics.clef06fr.mono.fr.txt
     qrel: qrels.clef06fr.txt
