--- a/src/main/resources/regression/cw12.yaml
+++ b/src/main/resources/regression/cw12.yaml
@@ -40,11 +40,11 @@ metrics:
 
 topic_reader: Webxml
 topics:
-  - name: "[TREC 2013 Web Track (Topics 201-250)](../src/main/resources/topics-and-qrels/topics.web.201-250.txt)"
+  - name: "[TREC 2013 Web Track (Topics 201-250)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.web.201-250.txt)"
     id: trec2013
     path: topics.web.201-250.txt
     qrel: qrels.web.201-250.txt
-  - name: "[TREC 2014 Web Track (Topics 251-300)](../src/main/resources/topics-and-qrels/topics.web.251-300.txt)"
+  - name: "[TREC 2014 Web Track (Topics 251-300)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.web.251-300.txt)"
     id: trec2014
     path: topics.web.251-300.txt
     qrel: qrels.web.251-300.txt
