--- a/src/main/resources/regression/mb13.yaml
+++ b/src/main/resources/regression/mb13.yaml
@@ -30,11 +30,11 @@ metrics:
 
 topic_reader: Microblog
 topics:
-  - name: "[TREC 2013 Microblog Track Topics](../src/main/resources/topics-and-qrels/topics.microblog2013.txt)"
+  - name: "[TREC 2013 Microblog Track Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.microblog2013.txt)"
     id: mb13
     path: topics.microblog2013.txt
     qrel: qrels.microblog2013.txt
-  - name: "[TREC 2014 Microblog Track Topics](../src/main/resources/topics-and-qrels/topics.microblog2014.txt)"
+  - name: "[TREC 2014 Microblog Track Topics](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.microblog2014.txt)"
     id: mb14
     path: topics.microblog2014.txt
     qrel: qrels.microblog2014.txt
