--- a/src/main/resources/regression/wt10g.yaml
+++ b/src/main/resources/regression/wt10g.yaml
@@ -30,7 +30,7 @@ metrics:
 
 topic_reader: Trec
 topics:
-  - name: "[Wt10g (Topics 451-550)](../src/main/resources/topics-and-qrels/topics.adhoc.451-550.txt)"
+  - name: "[Wt10g (Topics 451-550)](https://github.com/castorini/anserini-tools/tree/master/topics-and-qrels/topics.adhoc.451-550.txt)"
     id: wt10g
     path: topics.adhoc.451-550.txt
     qrel: qrels.adhoc.451-550.txt
