--- a/src/main/resources/regression/msmarco-passage-cos-dpr-distil.yaml
+++ b/src/main/resources/regression/msmarco-passage-cos-dpr-distil.yaml
@@ -30,6 +30,13 @@ metrics:
     parse_index: 2
     metric_precision: 4
     can_combine: false
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.1000
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
 
 topic_reader: JsonIntVector
 topics:
@@ -49,3 +56,5 @@ models:
         - 0.387
       R@100:
         - 0.900
+      R@1000:
+        - 0.970
