--- a/src/main/resources/regression/dl21-passage-splade-pp-ed.yaml
+++ b/src/main/resources/regression/dl21-passage-splade-pp-ed.yaml
@@ -6,7 +6,7 @@ download_url: https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco_v2_passa
 download_checksum: 1949a00bfd5e1f1a230a04bbc1f01539
 download_corpus: msmarco_v2_passage_unicoil_0shot
 
-index_path: indexes/msmarco-v2-passage-splade-pp-ed/
+index_path: indexes/lucene-index.msmarco-v2-passage-splade-pp-ed/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
@@ -61,45 +61,45 @@ topics:
     qrel: qrels.dl21-passage.txt
 
 models:
-  - name: unicoil-noexp-0shot
-    display: uniCOIL (noexp) zero-shot
-    params: -impact -pretokenized
+  - name: splade-pp-ed
+    display: SPLADE++ CoCondenser-EnsembleDistil
+    params: -parallelism 16 -impact -pretokenized
     results:
       MAP@100:
-        - 0.2193
+        - 0.3328
       MRR@100:
-        - 0.6991
+        - 0.8289
       nDCG@10:
-        - 0.5756
+        - 0.6846
       R@100:
-        - 0.4246
+        - 0.5619
       R@1000:
-        - 0.6897
-  - name: unicoil-noexp-0shot+rm3
+        - 0.8586
+  - name: splade-pp-ed+rm3
     display: +RM3
-    params: -impact -pretokenized -rm3 -collection JsonVectorCollection
+    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
     results:
       MAP@100:
-        - 0.2599
+        - 0.3338
       MRR@100:
-        - 0.7144
+        - 0.7961
       nDCG@10:
-        - 0.5933
+        - 0.6712
       R@100:
-        - 0.4811
+        - 0.5693
       R@1000:
-        - 0.7309
-  - name: unicoil-noexp-0shot+rocchio
+        - 0.8705
+  - name: splade-pp-ed+rocchio
     display: +Rocchio
-    params: -impact -pretokenized -rocchio -collection JsonVectorCollection
+    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
     results:
       MAP@100:
-        - 0.2666
+        - 0.3458
       MRR@100:
-        - 0.7526
+        - 0.8471
       nDCG@10:
-        - 0.6088
+        - 0.7002
       R@100:
-        - 0.4728
+        - 0.5572
       R@1000:
-        - 0.7509
+        - 0.8964
