--- a/src/main/resources/regression/dl22-passage-splade-pp-ed.yaml
+++ b/src/main/resources/regression/dl22-passage-splade-pp-ed.yaml
@@ -19,28 +19,35 @@ index_stats:
 metrics:
   - metric: MAP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m map
+    params: -c -M 100 -m map -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: MRR@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank
+    params: -c -M 100 -m recip_rank -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m ndcg_cut.10
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100
+    params: -c -m recall.100 -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000
+    params: -c -m recall.1000 -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -48,14 +55,10 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    id: dev
-    path: topics.msmarco-v2-passage.dev.splade-pp-ed.tsv.gz
-    qrel: qrels.msmarco-v2-passage.dev.txt
-  - name: "[MS MARCO V2 Passage: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
-    id: dev2
-    path: topics.msmarco-v2-passage.dev2.splade-pp-ed.tsv.gz
-    qrel: qrels.msmarco-v2-passage.dev2.txt
+  - name: "[DL22 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    id: dl22
+    path: topics.dl22.splade-pp-ed.tsv.gz
+    qrel: qrels.dl22-passage.txt
 
 models:
   - name: splade-pp-ed
@@ -63,14 +66,40 @@ models:
     params: -parallelism 16 -impact -pretokenized
     results:
       MAP@100:
-        - 0.1545
-        - 0.1647
+        - 0.1846
       MRR@100:
-        - 0.1559
-        - 0.1662
+        - 0.7005
+      nDCG@10:
+        - 0.5705
       R@100:
-        - 0.6025
-        - 0.6140
+        - 0.3742
       R@1000:
-        - 0.8220
-        - 0.8124
+        - 0.6629
+  - name: splade-pp-ed+rm3
+    display: +RM3
+    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
+    results:
+      MAP@100:
+        - 0.1930
+      MRR@100:
+        - 0.7161
+      nDCG@10:
+        - 0.5711
+      R@100:
+        - 0.3561
+      R@1000:
+        - 0.6367
+  - name: splade-pp-ed+rocchio
+    display: +Rocchio
+    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
+    results:
+      MAP@100:
+        - 0.1968
+      MRR@100:
+        - 0.6938
+      nDCG@10:
+        - 0.5897
+      R@100:
+        - 0.3822
+      R@1000:
+        - 0.6778
