--- a/src/main/resources/regression/dl21-passage-splade-pp-sd.yaml
+++ b/src/main/resources/regression/dl21-passage-splade-pp-sd.yaml
@@ -1,12 +1,12 @@
 ---
-corpus: msmarco-v2-passage-splade-pp-ed
-corpus_path: collections/msmarco/msmarco_v2_passage_splade_pp_ed/
+corpus: msmarco-v2-passage-splade-pp-sd
+corpus_path: collections/msmarco/msmarco_v2_passage_splade_pp_sd/
 
-download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco_v2_passage_splade_pp_ed.tar
-download_checksum: 2cdb2adc259b8fa6caf666b20ebdc0e8
-download_corpus: msmarco_v2_passage_splade_pp_ed
+download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco_v2_passage_splade_pp_sd.tar
+download_checksum: 061930dd615c7c807323ea7fc7957877
+download_corpus: msmarco_v2_passage_splade_pp_sd
 
-index_path: indexes/lucene-index.msmarco-v2-passage-splade-pp-ed/
+index_path: indexes/lucene-index.msmarco-v2-passage-splade-pp-sd/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
@@ -14,7 +14,7 @@ index_options: -impact -pretokenized -storeRaw
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
-  total terms: 861058871141
+  total terms: 907527565158
 
 metrics:
   - metric: MAP@100
@@ -55,51 +55,51 @@ metrics:
 
 topic_reader: TsvInt
 topics:
-  - name: "[DL22 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
-    id: dl22
-    path: topics.dl22.splade-pp-ed.tsv.gz
-    qrel: qrels.dl22-passage.txt
+  - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+    id: dl21
+    path: topics.dl21.splade-pp-sd.tsv.gz
+    qrel: qrels.dl21-passage.txt
 
 models:
-  - name: splade-pp-ed
-    display: SPLADE++ CoCondenser-EnsembleDistil
+  - name: splade-pp-sd
+    display: SPLADE++ CoCondenser-SelfDistil
     params: -parallelism 16 -impact -pretokenized
     results:
       MAP@100:
-        - 0.1846
+        - 0.3328
       MRR@100:
-        - 0.7005
+        - 0.8289
       nDCG@10:
-        - 0.5705
+        - 0.6846
       R@100:
-        - 0.3742
+        - 0.5619
       R@1000:
-        - 0.6629
-  - name: splade-pp-ed+rm3
+        - 0.8586
+  - name: splade-pp-sd+rm3
     display: +RM3
     params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
     results:
       MAP@100:
-        - 0.1930
+        - 0.3338
       MRR@100:
-        - 0.7161
+        - 0.7961
       nDCG@10:
-        - 0.5711
+        - 0.6712
       R@100:
-        - 0.3561
+        - 0.5693
       R@1000:
-        - 0.6367
-  - name: splade-pp-ed+rocchio
+        - 0.8705
+  - name: splade-pp-sd+rocchio
     display: +Rocchio
     params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
     results:
       MAP@100:
-        - 0.1968
+        - 0.3458
       MRR@100:
-        - 0.6938
+        - 0.8471
       nDCG@10:
-        - 0.5897
+        - 0.7002
       R@100:
-        - 0.3822
+        - 0.5572
       R@1000:
-        - 0.6778
+        - 0.8964
