--- a/src/main/resources/regression/msmarco-v2-passage-splade-pp-sd.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-splade-pp-sd.yaml
@@ -2,9 +2,9 @@
 corpus: msmarco-v2-passage-splade-pp-sd
 corpus_path: collections/msmarco/msmarco_v2_passage_splade_pp_sd/
 
-download_url: https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco_v2_passage_unicoil_0shot.tar
-download_checksum: 1949a00bfd5e1f1a230a04bbc1f01539
-download_corpus: msmarco_v2_passage_unicoil_0shot
+download_url: https://rgw.cs.uwaterloo.ca/pyserini/data/msmarco_v2_passage_splade_pp_sd.tar
+download_checksum: 061930dd615c7c807323ea7fc7957877
+download_corpus: msmarco_v2_passage_splade_pp_sd
 
 index_path: indexes/lucene-index.msmarco-v2-passage-splade-pp-sd/
 collection_class: JsonVectorCollection
@@ -14,7 +14,7 @@ index_options: -impact -pretokenized -storeRaw
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
-  total terms: 861058871141
+  total terms: 907527565158
 
 metrics:
   - metric: MAP@100
@@ -59,7 +59,7 @@ topics:
 
 models:
   - name: splade-pp-sd
-    display: SPLADE++ CoCondenser-EnsembleDistil
+    display: SPLADE++ CoCondenser-SelfDistil
     params: -parallelism 16 -impact -pretokenized
     results:
       MAP@100:
