--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,15 @@
           <testTarget>11</testTarget>
           <showDeprecation>true</showDeprecation>
           <compilerArgument>-Xlint:unchecked</compilerArgument>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
           <argLine>-Xmx8192m</argLine>
+          <!-- skipTests>true</skipTests -->
         </configuration>
       </plugin>
       <plugin>
